--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
 /*  your css code here. If applicable */
+h1{
+	text-align:center;
+}
+span{
+	color:blue;
+}
+input{
+	width:95vw;
+	height:4vh;
+	
+}
+
+.form-group>form>button{
+	padding:4px 7px;
+	cursor: pointer;
+	border-radius:4px;
+	border:none;
+	background-color: #1a73e8;
+	color:white;
+}
+
+table{
+	margin-top: 1rem;
+	border-collapse: collapse;
+	width:100%;
+	
+}
+
+
